<resources>
    <string name="app_name">recruitment_examination_calc</string>

    <!-- Button -->
    <string name="button_number_0">0</string>
    <string name="button_number_1">1</string>
    <string name="button_number_2">2</string>
    <string name="button_number_3">3</string>
    <string name="button_number_4">4</string>
    <string name="button_number_5">5</string>
    <string name="button_number_6">6</string>
    <string name="button_number_7">7</string>
    <string name="button_number_8">8</string>
    <string name="button_number_9">9</string>

    <string name="button_plus">+</string>
    <string name="button_minus">-</string>
    <string name="button_asterisk">*</string>
    <string name="button_solidus">/</string>
    <string name="button_equal">=</string>


</resources>