<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_calc_result"
            android:layout_width="0dp"
            android:layout_height="@dimen/activity_calc_result_height"
            android:text="calc result"
            android:textSize="@dimen/text_18sp"
            android:background="@color/result_color"
            android:layout_marginTop="@dimen/activity_calc_result_margin_top"
            android:layout_marginStart="@dimen/activity_calc_result_margin_start"
            android:layout_marginEnd="@dimen/activity_calc_result_margin_end"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:text="calc result"
            />

        <!-- 数字 -->
        <Button
            android:id="@+id/button_number_7"
            android:layout_width="@dimen/button_of_number_width"
            android:layout_height="@dimen/button_of_number_height"
            android:text="@string/button_number_7"
            android:textSize="@dimen/text_18sp"
            android:layout_marginTop="@dimen/button_number_margin_top"
            android:layout_marginStart="@dimen/button_number_margin_start"
            app:layout_constraintTop_toBottomOf="@+id/text_calc_result"
            app:layout_constraintLeft_toLeftOf="parent"
            />

        <Button
            android:id="@+id/button_number_8"
            android:layout_width="@dimen/button_of_number_width"
            android:layout_height="@dimen/button_of_number_height"
            android:text="@string/button_number_8"
            android:textSize="@dimen/text_18sp"
            android:layout_marginStart="@dimen/button_number_margin_start"
            app:layout_constraintTop_toTopOf="@+id/button_number_7"
            app:layout_constraintStart_toEndOf="@+id/button_number_7"
            />

        <Button
            android:id="@+id/button_number_9"
            android:layout_width="@dimen/button_of_number_width"
            android:layout_height="@dimen/button_of_number_height"
            android:text="@string/button_number_9"
            android:textSize="@dimen/text_18sp"
            android:layout_marginStart="@dimen/button_number_margin_start"
            app:layout_constraintTop_toTopOf="@+id/button_number_8"
            app:layout_constraintStart_toEndOf="@+id/button_number_8"
            />

        <Button
            android:id="@+id/button_number_4"
            android:layout_width="@dimen/button_of_number_width"
            android:layout_height="@dimen/button_of_number_height"
            android:text="@string/button_number_4"
            android:textSize="@dimen/text_18sp"
            android:layout_marginTop="@dimen/button_number_margin_top"
            app:layout_constraintTop_toBottomOf="@+id/button_number_7"
            app:layout_constraintStart_toStartOf="@+id/button_number_7"
            />

        <Button
            android:id="@+id/button_number_5"
            android:layout_width="@dimen/button_of_number_width"
            android:layout_height="@dimen/button_of_number_height"
            android:text="@string/button_number_5"
            android:textSize="@dimen/text_18sp"
            android:layout_marginStart="@dimen/button_number_margin_start"
            app:layout_constraintTop_toTopOf="@+id/button_number_4"
            app:layout_constraintStart_toEndOf="@+id/button_number_4"
            />

        <Button
            android:id="@+id/button_number_6"
            android:layout_width="@dimen/button_of_number_width"
            android:layout_height="@dimen/button_of_number_height"
            android:text="@string/button_number_6"
            android:textSize="@dimen/text_18sp"
            android:layout_marginStart="@dimen/button_number_margin_start"
            app:layout_constraintTop_toTopOf="@+id/button_number_5"
            app:layout_constraintStart_toEndOf="@+id/button_number_5"
            />

        <Button
            android:id="@+id/button_number_1"
            android:layout_width="@dimen/button_of_number_width"
            android:layout_height="@dimen/button_of_number_height"
            android:text="@string/button_number_1"
            android:textSize="@dimen/text_18sp"
            android:layout_marginTop="@dimen/button_number_margin_top"
            app:layout_constraintTop_toBottomOf="@+id/button_number_4"
            app:layout_constraintStart_toStartOf="@+id/button_number_4"
            />

        <Button
            android:id="@+id/button_number_2"
            android:layout_width="@dimen/button_of_number_width"
            android:layout_height="@dimen/button_of_number_height"
            android:text="@string/button_number_2"
            android:textSize="@dimen/text_18sp"
            android:layout_marginStart="@dimen/button_number_margin_start"
            app:layout_constraintTop_toTopOf="@+id/button_number_1"
            app:layout_constraintStart_toEndOf="@+id/button_number_1"
            />

        <Button
            android:id="@+id/button_number_3"
            android:layout_width="@dimen/button_of_number_width"
            android:layout_height="@dimen/button_of_number_height"
            android:text="@string/button_number_3"
            android:textSize="@dimen/text_18sp"
            android:layout_marginStart="@dimen/button_number_margin_start"
            app:layout_constraintTop_toTopOf="@+id/button_number_2"
            app:layout_constraintStart_toEndOf="@+id/button_number_2"
            />

        <!-- 記号 -->
        <Button
            android:id="@+id/button_number_0"
            android:layout_width="@dimen/button_of_number_width"
            android:layout_height="@dimen/button_of_number_height"
            android:text="@string/button_number_0"
            android:textSize="@dimen/text_18sp"
            android:layout_marginTop="@dimen/button_number_margin_top"
            app:layout_constraintTop_toBottomOf="@+id/button_number_1"
            app:layout_constraintStart_toStartOf="@+id/button_number_1"
            />

        <Button
            android:id="@+id/button_plus"
            android:layout_width="@dimen/button_of_number_width"
            android:layout_height="@dimen/button_of_number_height"
            android:text="@string/button_plus"
            android:textSize="@dimen/text_18sp"
            android:layout_marginStart="@dimen/button_number_margin_start"
            app:layout_constraintTop_toTopOf="@+id/button_number_0"
            app:layout_constraintStart_toEndOf="@+id/button_number_0"
            />

        <Button
            android:id="@+id/button_minus"
            android:layout_width="@dimen/button_of_number_width"
            android:layout_height="@dimen/button_of_number_height"
            android:text="@string/button_minus"
            android:textSize="@dimen/text_18sp"
            android:layout_marginStart="@dimen/button_number_margin_start"
            app:layout_constraintTop_toTopOf="@+id/button_plus"
            app:layout_constraintStart_toEndOf="@+id/button_plus"
            />

        <Button
            android:id="@+id/button_asterisk"
            android:layout_width="@dimen/button_of_number_width"
            android:layout_height="@dimen/button_of_number_height"
            android:text="@string/button_asterisk"
            android:textSize="@dimen/text_18sp"
            android:layout_marginTop="@dimen/button_number_margin_top"
            app:layout_constraintTop_toBottomOf="@+id/button_number_0"
            app:layout_constraintStart_toStartOf="@+id/button_number_0"
            />

        <Button
            android:id="@+id/button_solidus"
            android:layout_width="@dimen/button_of_number_width"
            android:layout_height="@dimen/button_of_number_height"
            android:text="@string/button_solidus"
            android:textSize="@dimen/text_18sp"
            android:layout_marginStart="@dimen/button_number_margin_start"
            app:layout_constraintTop_toTopOf="@+id/button_asterisk"
            app:layout_constraintStart_toEndOf="@+id/button_asterisk"
            />

        <Button
            android:id="@+id/button_equal"
            android:layout_width="@dimen/button_of_number_width"
            android:layout_height="@dimen/button_of_number_height"
            android:text="@string/button_equal"
            android:textSize="@dimen/text_18sp"
            android:layout_marginStart="@dimen/button_number_margin_start"
            app:layout_constraintTop_toTopOf="@+id/button_solidus"
            app:layout_constraintStart_toEndOf="@+id/button_solidus"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>